apps/staging/volsync/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: volsync
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: volsync.dev.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
  - name: volsync
    hostname: volsync.dev.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: volsync-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: volsync.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: volsync
spec:
  parentRefs:
  - name: volsync
  hostnames: ["volsync.dev.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: volsync
      port: 8081
